--- a/next-i18n-remote/package.json
+++ b/next-i18n-remote/package.json
@@ -3,19 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3002",
+    "dev": "NEXT_PRIVATE_LOCAL_WEBPACK=true next dev -p 3002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.0.2",
+    "@mui/styled-engine-sc": "^6.0.2",
     "fs": "^0.0.1-security",
     "i18next": "^23.14.0",
     "next": "14.2.7",
     "next-i18next": "^15.3.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-i18next": "^15.0.1"
+    "react-i18next": "^15.0.1",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@module-federation/nextjs-mf": "^8.4.13",
